@@ -3,8 +3,8 @@
 # See the file "LICENSE" for more information
 
 #uncomment the desired multiobjective algorithm
-parent.0 = spea2.params
-#parent.0 = nsga2.params
+#parent.0 = spea2.params
+parent.0 = nsga2.params
 
 eval.problem = ec.app.moosuite.MooSuite
 eval.problem.type = zdt1
@@ -30,8 +30,9 @@ pop.subpop.0.size =			100
 generations =				250
 select.tournament.size =                2
 
-pop.subpop.0.species.crossover-type = one
+pop.subpop.0.species.crossover-type = sbx
+pop.subpop.0.species.crossover-distribution-index = 20
 pop.subpop.0.species.mutation-type = polynomial
-pop.subpop.0.species.distribution-index = 20
+pop.subpop.0.species.mutation-distribution-index = 20
 pop.subpop.0.species.bounded = true
 
