@@ -195,6 +195,10 @@ public class DoubleVectorIndividual extends VectorIndividual
                 i.genome[x] = u; 
                 }
             }
+			case VectorSpecies.C_SIMULATED_BINARY:
+				{
+				simulatedBinaryCrossover(state.random[thread], i, s.crossoverDistributionIndex);
+				}
             break;
             }
         }
@@ -285,7 +289,7 @@ public class DoubleVectorIndividual extends VectorIndividual
             } 
 			else if (s.mutationType == FloatVectorSpecies.C_POLYNOMIAL_MUTATION)
 				{
-				polynomialMutate(state.random[thread], this, s.distributionIndex, s.polynomialIsBounded);
+				polynomialMutate(state.random[thread], s.crossoverDistributionIndex, s.polynomialIsBounded);
 				}
         else
             {// C_RESET_MUTATION
@@ -298,10 +302,10 @@ public class DoubleVectorIndividual extends VectorIndividual
 		
 	/** This function is broken out to keep it identical to NSGA-II's mutation.c code. eta_m is the distribution
 		index.  */
-	public void polynomialMutate(MersenneTwisterFast random, DoubleVectorIndividual individual, double eta_m, boolean bounded)
+	public void polynomialMutate(MersenneTwisterFast random, double eta_m, boolean bounded)
 		{
-        FloatVectorSpecies s = (FloatVectorSpecies) individual.species;
-		double[] ind = individual.genome;
+        FloatVectorSpecies s = (FloatVectorSpecies) species;
+		double[] ind = genome;
 		double[] min_realvar = s.minGenes;
 		double[] max_realvar = s.maxGenes;
 		
@@ -355,6 +359,96 @@ public class DoubleVectorIndividual extends VectorIndividual
 				}
 			}
 		}
+
+
+
+	public void simulatedBinaryCrossover(MersenneTwisterFast random, DoubleVectorIndividual other, double eta_c)
+		{
+		final double EPS = FloatVectorSpecies.SIMULATED_BINARY_CROSSOVER_EPS;
+        FloatVectorSpecies s = (FloatVectorSpecies) species;
+		double[] parent1 = genome;
+		double[] parent2 = other.genome;
+		double[] min_realvar = s.minGenes;
+		double[] max_realvar = s.maxGenes;
+		
+		
+		double y1, y2, yl, yu;
+		double c1, c2;
+		double alpha, beta, betaq;
+		double rand;
+		
+		for(int i = 0; i < parent1.length; i++)
+			{
+			if (random.nextBoolean())  // 0.5f
+				{
+				if (Math.abs(parent1[i] - parent2[i]) > EPS)
+					{
+					if (parent1[i] < parent2[i])
+						{
+						y1 = parent1[i];
+						y2 = parent2[i];
+						}
+					else
+						{
+						y1 = parent2[i];
+						y2 = parent1[i];
+						}
+					yl = min_realvar[i];
+					yu = max_realvar[i];	
+					rand = random.nextDouble();
+                    beta = 1.0 + (2.0*(y1-yl)/(y2-y1));
+                    alpha = 2.0 - Math.pow(beta,-(eta_c+1.0));
+                    if (rand <= (1.0/alpha))
+						{
+                        betaq = Math.pow((rand*alpha),(1.0/(eta_c+1.0)));
+						}
+                    else
+						{
+                        betaq = Math.pow((1.0/(2.0 - rand*alpha)),(1.0/(eta_c+1.0)));
+						}
+                    c1 = 0.5*((y1+y2)-betaq*(y2-y1));
+                    beta = 1.0 + (2.0*(yu-y2)/(y2-y1));
+                    alpha = 2.0 - Math.pow(beta,-(eta_c+1.0));
+                    if (rand <= (1.0/alpha))
+                    {
+                        betaq = Math.pow((rand*alpha),(1.0/(eta_c+1.0)));
+                    }
+                    else
+                    {
+                        betaq = Math.pow((1.0/(2.0 - rand*alpha)),(1.0/(eta_c+1.0)));
+                    }
+                    c2 = 0.5*((y1+y2)+betaq*(y2-y1));
+                    if (c1<yl)
+                        c1=yl;
+                    if (c2<yl)
+                        c2=yl;
+                    if (c1>yu)
+                        c1=yu;
+                    if (c2>yu)
+                        c2=yu;
+					if (random.nextBoolean())
+						{
+						parent1[i] = c2;
+						parent2[i] = c1;
+						}
+					else
+						{
+						parent1[i] = c1;
+						parent2[i] = c2;
+						}
+					}
+				else
+					{
+					// do nothing
+					}
+				}
+			else
+				{
+				// do nothing
+				}
+			}
+		}
+
 
     /**
      * Initializes the individual by randomly choosing doubles uniformly from
